PROD-12-18-19/force-app/main/default/objects/Permission__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Permissions</relationshipLabel>
    <relationshipName>Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>