PROD-12-18-19/force-app/main/default/objects/Permission__c/fields/Account_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Account_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>Account_Vehicle__c</referenceTo>
    <relationshipLabel>Permissions</relationshipLabel>
    <relationshipName>Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>