PROD-12-18-19/force-app/main/default/objects/Permission__c/fields/Alert_Status__c.field-meta.xml
<CustomField>
    <fullName>Alert_Status__c</fullName>
    <label>Alert Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>