PROD-12-18-19/force-app/main/default/objects/Permission__c/fields/Commitment__c.field-meta.xml
<CustomField>
    <fullName>Commitment__c</fullName>
    <formula>Fund__r.Name&amp;&quot;-&quot; &amp;Account_Vehicle__r.Name</formula>
    <label>Commitment</label>
    <type>Text</type>
</CustomField>