PROD-12-18-19/force-app/main/default/objects/Permission__c/fields/Finaccount__c.field-meta.xml
<CustomField>
    <fullName>Finaccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commitment</label>
    <referenceTo>Finaccount__c</referenceTo>
    <relationshipLabel>Permissions</relationshipLabel>
    <relationshipName>Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>