PROD-12-18-19/force-app/main/default/objects/Permission__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Vehicle</label>
    <referenceTo>Investment_Vehicle__c</referenceTo>
    <relationshipLabel>Permissions</relationshipLabel>
    <relationshipName>Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>