PROD-12-18-19/force-app/main/default/objects/Permission__c/validationRules/Alert_Status_Status_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Alert_Status_Status_Check</fullName>
    <active>false</active>
    <description>Alert Status can not be Active if Permission Status is Inactive</description>
    <errorConditionFormula>AND( ISPICKVAL(Status__c , &quot;Inactive&quot;), ISPICKVAL( Alert_Status__c ,&quot;Active&quot;))</errorConditionFormula>
    <errorMessage>Alert Status can not be Active if the Document Permission Status is Inactive</errorMessage>
</ValidationRule>